updated BookService tests